--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-moment": "~0.10.3",
+    "moment": "~2.11.1",
+    "angular-loading-bar": "~0.8.0",
+    "ngmap": "~1.16.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
